...
    return [
      Row(
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          Expanded(
            child: HorizonUI.HorizonDropdownMenu<String>(
              key: const Key('asset_dropdown_menu'),
              items: assets.map((String asset) {
                final dispenserForAsset = dispensers.firstWhere(
                  (dispenser) => dispenser.asset == asset,
                );
                return DropdownMenuItem<String>(
                  key: Key('asset_dropdown_item_$asset'),
...
            Expanded(
              child: AbsorbPointer(
                absorbing: _inputMethod != InputMethod.Quantity,
                child: Opacity(
                  opacity: _inputMethod == InputMethod.Quantity ? 1.0 : 0.5,
                  child: Container(
                    key: const Key('dispense_quantity_input'),
                    decoration: BoxDecoration(
                      border: Border.all(
                        color: Theme.of(context).dividerColor,
                        width: 1.0,
                      ),
                      borderRadius: BorderRadius.circular(8.0),
...
                                  });
                                }
                              : null,
                        ),
                        Expanded(
                          child: Text(
                            key: const Key('buy_quantity_text'),
                            '${values[currentIndex]}',
                            textAlign: TextAlign.center,
                            style: TextStyle(
                              color: isDarkMode ? Colors.white : Colors.black,
                              fontWeight: FontWeight.w500,
                              fontSize: 16,
...
              ),
            ),
            const SizedBox(width: 16),
            // Lot Input Field
            Expanded(
              child: HorizonUI.HorizonTextFormField(
                key: const Key('lot_input'),
                label: 'Lots',
                controller: lotController,
                enabled: _inputMethod == InputMethod.Lots,
                keyboardType: TextInputType.number,
                inputFormatters: [
                  FilteringTextInputFormatter.digitsOnly,
...
            .toDouble()
            .toStringAsFixed(8)
        : '';

    priceController.text = price;
    return HorizonUI.HorizonTextFormField(
      key: const Key('price_input'),
      label: 'Price',
      controller: priceController,
      enabled: false,
    );
  }

...
        label: "Source Address",
      ),
      const SizedBox(height: 16.0),
      HorizonUI.HorizonTextFormField(
        key: const Key('dispense_dispenser_input'),
        controller: dispenserController,
        label: 'Dispenser Address',
        onChanged: (value) {
          dispenserController.text = value;
          context
              .read<ComposeDispenseBloc>()
              .add(DispenserAddressChanged(address: value));
        },
...
